# sirius-2021-warehouse

./: .gitignore  Correct_create_order.ipynb  Create_map_for_Maks.ipynb  README.md  data.txt  ОбходТоваров.ipynb
Danil/: main.cpp  ОбходТоваров.ipynb
Maksim/: Correct_create_map.ipynb  Correct_create_order.ipynb  Create_map_for_Maks.ipynb  Untitled1.ipynb  beta_version1.1.ipynb  beta_version1.2.ipynb  beta_version1.3.ipynb  beta_version1.4.ipynb  beta_version2.1.ipynb  beta_version2.2.ipynb  beta_version2.3.ipynb  beta_version2.4.ipynb  beta_version2.5.ipynb  snake18.12.ipynb
Maksim/check/: dist.py  main.py  test_dist.py
Maksim_super/: Snake.ipynb
Stefan/: README.md  Test_notebook.ipynb
Stefan/StoragePathver2/: CMakeLists.txt  main.cpp  packages.config  warehouse-split.sln  warehouse-split.vcxproj
data_sample/: T_sample.json  output.json  sample.json  sample.txt  sample_10240.json  sample_1600_1.json  sample_1_2.json  sample_3200_1.json  sample_3200_2.json  sample_3200_4.json  sample_400_1-2.json  sample_600_1.json  sample_64_1.json
data_sample_output/: output64_1_Maksim.json  output_1600_1_Maksim.json  output_1600_1_stepan.json  output_3200_1_stepan.json  output_3200_2_stepan.json  output_600_1_stepan.json  output_64_1_Maksim.json  output_64_1_stepan.json
visual_sample/: map.json  order.json  visual_sample_map-2.json  visual_sample_order (1).json  visual_sample_order.json
